[package]
name = "mrCache"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.24.0", features = ["r2d2"]}
r2d2 = "0.8.10"
tonic = "0.10.2"
tokio = { version = "1.35.0", features = ["full"] }
prost = "0.12.3"

serde = {version = "1.0.193", features = ["derive"]}

[build-dependencies]
tonic-build = "0.10.2"